fix: Fix banner content wrapping with wide content
Now the banner text should have a more reasonable minimum width of 200px when it contains text that wraps to multiple lines.

Also, added margin between text and button, and made them next to each other on wide screens. Max width of the banner content is now 768px.

Closes #91

--- a/layouts/partials/modules/banner.css
+++ b/layouts/partials/modules/banner.css
@@ -1,16 +1,21 @@
 .module-banner {
-  padding: var(--content-padding);
+  padding: calc(var(--content-padding) / 2) max(var(--content-padding) / 2, (100% - 768px) / 2);
   background: var(--color-fg);
   color: white;
   letter-spacing: normal;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 
 .module-banner > :first-child {
-  flex: 1;
-  max-width: 480px;
+  flex: 1 1 200px;
+  max-width: max-content;
+}
+
+.module-banner > * {
+  margin: calc(var(--content-padding) / 2);
 }
 
 .module-banner h3 {
